@@ -20,14 +20,13 @@
 package org.xwiki.rendering.internal.transformation.wikiword;
 
 import java.io.StringReader;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.xwiki.rendering.block.Block;
+import javax.inject.Inject;
+import javax.inject.Named;
+
+import org.junit.jupiter.api.Test;
 import org.xwiki.rendering.block.MacroMarkerBlock;
 import org.xwiki.rendering.block.WordBlock;
 import org.xwiki.rendering.block.XDOM;
@@ -35,11 +34,12 @@ import org.xwiki.rendering.parser.Parser;
 import org.xwiki.rendering.renderer.BlockRenderer;
 import org.xwiki.rendering.renderer.printer.DefaultWikiPrinter;
 import org.xwiki.rendering.renderer.printer.WikiPrinter;
-import org.xwiki.rendering.syntax.Syntax;
 import org.xwiki.rendering.transformation.Transformation;
 import org.xwiki.rendering.transformation.TransformationContext;
-import org.xwiki.test.ComponentManagerRule;
 import org.xwiki.test.annotation.AllComponents;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * Unit tests for {@link org.xwiki.rendering.internal.transformation.wikiword.WikiWordTransformation}.
@@ -47,22 +47,28 @@ import org.xwiki.test.annotation.AllComponents;
  * @version $Id$
  * @since 2.6RC1
  */
+@ComponentTest
 @AllComponents
-public class WikiWordTransformationTest
+class WikiWordTransformationTest
 {
-    @Rule
-    public ComponentManagerRule componentManager = new ComponentManagerRule();
-
+    @Inject
+    @Named("wikiword")
     private Transformation wikiWordTransformation;
 
-    @Before
-    public void setUp() throws Exception
-    {
-        this.wikiWordTransformation = this.componentManager.getInstance(Transformation.class, "wikiword");
-    }
+    @Inject
+    @Named("xwiki/2.1")
+    private Parser parser;
+
+    @Inject
+    @Named("xwiki/2.1")
+    private BlockRenderer xwikiBlockRenderer;
+
+    @Inject
+    @Named("event/1.0")
+    private BlockRenderer eventBlockRenderer;
 
     @Test
-    public void testWikiWordTransformation() throws Exception
+    void wikiWordTransformation() throws Exception
     {
         // Tests the following at once:
         // - that a wiki word is recognized
@@ -71,35 +77,32 @@ public class WikiWordTransformationTest
         // - that two uppercase letters following each other (as in "XWiki") are not considered a wiki word
         // - that several uppercases chars followed by lowercases and then one uppercase and lowercase chars is
         //   recognized as a wiki word (eg "XWikiEnterprise")
-        String testInput = "This is a WikiWord, Another\u00D9ne, XWikiEnterprise, not one: XWiki";
+        String testInput = "This is a WikiWord, AnotherÙne, XWikiEnterprise, not one: XWiki";
 
-        Parser parser = this.componentManager.getInstance(Parser.class, "xwiki/2.1");
-        XDOM xdom = parser.parse(new StringReader(testInput));
+        XDOM xdom = this.parser.parse(new StringReader(testInput));
         this.wikiWordTransformation.transform(xdom, new TransformationContext());
         WikiPrinter printer = new DefaultWikiPrinter();
-        BlockRenderer xwiki21BlockRenderer = this.componentManager.getInstance(BlockRenderer.class, "xwiki/2.1");
-        xwiki21BlockRenderer.render(xdom, printer);
-        Assert.assertEquals("This is a [[doc:WikiWord]], [[doc:Another\u00D9ne]], [[doc:XWikiEnterprise]], "
-            + "not one: XWiki", printer.toString());
+        this.xwikiBlockRenderer.render(xdom, printer);
+        assertEquals("This is a [[doc:WikiWord]], [[doc:AnotherÙne]], [[doc:XWikiEnterprise]], not one: XWiki",
+            printer.toString());
     }
 
     @Test
-    public void testWikiWordTransformationIgnoresProtectedContent() throws Exception
+    void wikiWordTransformationIgnoresProtectedContent() throws Exception
     {
-        String expected = "beginDocument\n"
-            + "beginMacroMarkerStandalone [code] []\n"
-            + "onWord [WikiWord]\n"
-            + "endMacroMarkerStandalone [code] []\n"
-            + "endDocument";
+        String expected = """
+            beginDocument
+            beginMacroMarkerStandalone [code] []
+            onWord [WikiWord]
+            endMacroMarkerStandalone [code] []
+            endDocument""";
 
-        XDOM xdom = new XDOM(Arrays.asList((Block) new MacroMarkerBlock("code", Collections.<String, String>emptyMap(),
-            Arrays.asList((Block) new WordBlock("WikiWord")), false)));
+        XDOM xdom = new XDOM(List.of(new MacroMarkerBlock("code", Collections.emptyMap(),
+            List.of(new WordBlock("WikiWord")), false)));
         this.wikiWordTransformation.transform(xdom, new TransformationContext());
 
         WikiPrinter printer = new DefaultWikiPrinter();
-        BlockRenderer eventBlockRenderer =
-            this.componentManager.getInstance(BlockRenderer.class, Syntax.EVENT_1_0.toIdString());
-        eventBlockRenderer.render(xdom, printer);
-        Assert.assertEquals(expected, printer.toString());
+        this.eventBlockRenderer.render(xdom, printer);
+        assertEquals(expected, printer.toString());
     }
 }
